more syntax change

--- a/_posts/2017-3-19-word2vec.md
+++ b/_posts/2017-3-19-word2vec.md
@@ -2,8 +2,7 @@
 layout: post
 title: Word2Vec的一些理解
 ---
-======
-
+------------------
 
 上周在公众号里看到陈老师（陈利人）写的一篇word2vec的讲解: [如果看了此文还不懂Word2Vec，那是我太笨](http://mp.weixin.qq.com/s/nPqrQJTIvVq36rU7NRghSg)。
 正好上次大神也做过一次word2vec的分享，觉得挺有意思，就看了这篇博文和其它一些资料，在此跟大家分享一下我个人的理解。
@@ -11,9 +10,10 @@ title: Word2Vec的一些理解
 ## 1. Word2Vec是什么？
 ------
 ![Tomas Mikolov](http://7xqyb5.com1.z0.glb.clouddn.com/tomas-mikolov.png)
-Word2Vec是一组用来学习和生成“词的向量表示法”(词嵌入)的模型，是2013年由Google的Tomas Mikolov（后来去了FAIR）等人提出来的，包含了两种训练模型： CBOW（Continuous Bag－of－Words Model）和Skip－gram模型，现在Word2Vec是深度学习在NLP中应用的基础部件。
 
-Word2Vec既不是指某个算法，也不是指深度学习，但是它所包含的两种模型 CBOW 和 skip-gram 的确是比较浅层的神经元网络。
+*Word2Vec*是一组用来学习和生成“词的向量表示法”(词嵌入)的模型，是2013年由Google的Tomas Mikolov（后来去了FAIR）等人提出来的，包含了两种训练模型： CBOW（Continuous Bag－of－Words Model）和Skip－gram模型，现在Word2Vec是深度学习在NLP中应用的基础部件。
+
+*Word2Vec*既不是指某个算法，也不是指深度学习，但是它所包含的两种模型 CBOW 和 skip-gram 的确是比较浅层的神经元网络。
 
 ## 2. 动机：为什么要有Word2Vec这样的模型工具？
 ------
@@ -54,10 +54,4 @@ TensorFlow里包含了它的实现，[Tutorials](https://www.tensorflow.org/tuto
 1） 中间的浅层神经元网络是怎么训练的？
 
 2） 隐含层的向量的维度m有什么意义，怎么进行取舍，与词汇表向量的维度n的关系？
-
-
-
-
-
-
-
+<br><br><br>
